force-app/main/default/objects/ADM_Change_List__c/fields/Changelist__c.field-meta.xml
<CustomField>
    <fullName>Changelist__c</fullName>
    <description>Link back to the changelist description</description>
    <formula>IF(ISPICKVAL(Source__c, &#39;Perforce&#39;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; Perforce_Changelist__c, Perforce_Changelist__c), 



IF(ISPICKVAL(Source__c, &#39;&#39;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; Perforce_Changelist__c, Perforce_Changelist__c), 



IF(ISPICKVAL(Source__c, &#39;GitHub&#39;),  HYPERLINK( &quot;https://github.com/&quot; &amp; Perforce_Changelist__c, &quot;github.com/&quot; &amp; Perforce_Changelist__c),


IF(ISPICKVAL(Source__c, &#39;Stash&#39;),  

HYPERLINK( &quot;https://stash.soma.salesforce.com/&quot; &amp; Perforce_Changelist__c, &quot;stash.soma.salesforce.com/&quot; &amp; Perforce_Changelist__c),


HYPERLINK(&quot;https://git.soma.salesforce.com/&quot; &amp; Perforce_Changelist__c, &quot;git.soma.salesforce.com/&quot; &amp; Perforce_Changelist__c)

)


)



)



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Changelist Link</label>
    <type>Text</type>
</CustomField>