force-app/main/default/objects/ADM_Change_List__c/fields/Check_In_By__c.field-meta.xml
<CustomField>
    <fullName>Check_In_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check-in By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZvMAI</relationshipName>
    <type>Lookup</type>
</CustomField>