force-app/main/default/objects/ADM_Change_List__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <label>Check-in Date</label>
    <type>DateTime</type>
</CustomField>