force-app/main/default/objects/ADM_Change_List__c/fields/Local_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Local_Check_in_Date__c</fullName>
    <label>Local Check-in Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>