force-app/main/default/objects/ADM_Change_List__c/fields/Perforce_Changelist__c.field-meta.xml
<CustomField>
    <fullName>Perforce_Changelist__c</fullName>
    <description>Reference to Perforce Changelist number</description>
    <label>Changelist #</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>