force-app/main/default/objects/ADM_Change_List__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <label>Release Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>