force-app/main/default/objects/ADM_Change_List__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>ADM_Task__c</referenceTo>
    <relationshipLabel>Change Lists</relationshipLabel>
    <relationshipName>Change_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>