force-app/main/default/objects/ADM_Change_List__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipName>WorkChangeLists</relationshipName>
    <type>Lookup</type>
</CustomField>