force-app/main/default/objects/ADM_Change_List__c/fields/Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Number__c</fullName>
    <formula>VALUE(RIGHT(Work__r.Name, 6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>